rendered/envs/demo/openproject/deployment-openproject-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: openproject
    app.kubernetes.io/version: 14.6.3
    helm.sh/chart: openproject-8.3.2
    openproject/process: web
  name: openproject-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: openproject
      app.kubernetes.io/name: openproject
      openproject/process: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/env-core: 6ecb3d8bb3051547334aa6582e4df32a21c526c80d78d7c10a865d92d9427368
        checksum/env-environment: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/env-memcached: 27fe1449e5754ecf5d02931b1fb5b6825ec28917e178a4df457cd856aaa00130
        checksum/env-oidc: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/env-s3: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
      labels:
        app.kubernetes.io/instance: openproject
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: openproject
        app.kubernetes.io/version: 14.6.3
        helm.sh/chart: openproject-8.3.2
        openproject/process: web
    spec:
      containers:
        - command:
            - bash
            - /app/docker/prod/web
          image: docker.io/openproject/openproject:14.6.3-slim
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: localhost
              path: /health_checks/default
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 3
          name: openproject
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 30
            httpGet:
              httpHeaders:
                - name: Host
                  value: localhost
              path: /health_checks/default
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: "4"
              memory: 4Gi
            requests:
              cpu: 250m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /app/tmp
              name: app-tmp
            - mountPath: /var/openproject/assets
              name: data
      securityContext:
        fsGroup: 1000
      serviceAccountName: openproject
      volumes:
        - ephemeral:
            volumeClaimTemplate:
              metadata:
                creationTimestamp: null
              spec:
                accessModes:
                  - ReadWriteOnce
                resources:
                  requests:
                    storage: 5Gi
          name: tmp
        - ephemeral:
            volumeClaimTemplate:
              metadata:
                creationTimestamp: null
              spec:
                accessModes:
                  - ReadWriteOnce
                resources:
                  requests:
                    storage: 5Gi
          name: app-tmp
        - name: data
          persistentVolumeClaim:
            claimName: openproject
