rendered/envs/demo/openproject/service-openproject-memcached.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: memcached
    app.kubernetes.io/version: 1.6.24
    helm.sh/chart: memcached-6.14.0
  name: openproject-memcached
  namespace: openproject
spec:
  ports:
    - name: memcache
      nodePort: null
      port: 11211
      targetPort: memcache
  selector:
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/name: memcached
  type: ClusterIP
