rendered/envs/demo/openproject/service-openproject-postgresql-hl.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 15.4.0
    helm.sh/chart: postgresql-12.12.10
  name: openproject-postgresql-hl
  namespace: openproject
spec:
  clusterIP: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/name: postgresql
  type: ClusterIP
