rendered/envs/demo/openproject/service-openproject.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: openproject
    app.kubernetes.io/version: 14.6.3
    helm.sh/chart: openproject-8.3.2
  name: openproject
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: openproject
    app.kubernetes.io/name: openproject
    openproject/process: web
  type: ClusterIP
