rendered/envs/demo/openproject/ingressroute-openproject-server-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: openproject-server-route
  namespace: openproject
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`openproject.demo.budd.ee`)
      priority: 10
      services:
        - name: openproject
          port: 8080
          scheme: http
